@@ -9,6 +9,10 @@
 
 #include "fasp.h" 
 #include "fasp_block.h" 
+ 
+#ifdef __cplusplus
+extern "C" { 
+#endif
 
 /*-------- In file: amg.c --------*/
 
@@ -2818,4 +2822,9 @@ int fasp_umfpack_solve (dCSRmat *ptrA,
 
 int fasp_umfpack_free_numeric (void *Numeric);
 
+ 
+#ifdef __cplusplus
+} 
+#endif
+ 
 /* End of fasp_functs.h */
